--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-ace": "^8.1.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
   "main": "public/electron.js",
