--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "author": {
-    "name":"Lucas Resende de Sousa Amaral",
+    "name": "Lucas Resende de Sousa Amaral",
     "email": "lucasresone@gmail.com"
   },
   "homepage": "./",
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^7.1.2",
     "ace-builds": "^1.4.9",
     "electron-is-dev": "^1.2.0",
+    "electron-store": "^5.1.1",
     "react": "^16.13.1",
     "react-ace": "^8.1.0",
     "react-dom": "^16.13.1",
